// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box boxShadowSize prop sets box-shadow 1`] = `
.c0 {
  box-shadow: 0 -1px 0 0 rgba(0,0,0,0.03),0 0 1px 0 rgba(0,0,0,0.24),0 2px 1px -1px rgba(0,0,0,0.16),0 2px 4px 0 rgba(0,0,0,0.12);
}

<div
  className="c0"
/>
`;

exports[`Box color prop sets color 1`] = `
.c0 {
  color: #0068ef;
}

<div
  className="c0"
  color="blue"
/>
`;

exports[`Box m prop sets margin 1`] = `
.c0 {
  margin: 8px;
}

<div
  className="c0"
/>
`;

exports[`Box maxHeight, maxWidth, minHeight, minWidth 1`] = `
.c0 {
  max-height: 250px;
  max-width: 250px;
  min-height: 55px;
  min-width: 55px;
}

<div
  className="c0"
/>
`;

exports[`Box p prop sets padding 1`] = `
.c0 {
  padding: 8px;
}

<div
  className="c0"
/>
`;

exports[`Box renders 1`] = `
<div
  className=""
/>
`;

exports[`Box width and height props set width/height 1`] = `
.c0 {
  height: 50%;
  width: 50%;
}

<div
  className="c0"
  height="50%"
  width={0.5}
/>
`;
